[package]
name = "key_value_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
encoding_rs = "0.8.31"
thread_local = "1.1.4"

[profile.release]
codegen-units = 1
panic = "abort"
